--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <section class="b">
 
                 <img class="imagep" alt="image_potfolio"
-                        src="./image/pooortfolio.jpg">
+                        src="image/pooortfolio.jpg">
 
                 <div class="portfolioT">
                         <p class="font_w">Mon portfolio</p>
@@ -153,7 +153,7 @@
 
         <div class="slide-container">
                 <section class="custom-slider fade">
-                        <img class="imagep2" alt="image_potfolio" src="./image/carti.jpg">
+                        <img class="imagep2" alt="image_potfolio" src="image/carti.jpg">
                         <div class="musiquedumomenT">
                                 <p class="font_l">
                                         Le morceau «Birthday Freestyle» de Playboi Carti dans sa version remixée chill
@@ -174,7 +174,7 @@
                         </div>
                 </section>
                 <section class="custom-slider fade">
-                        <img class="imagep3" alt="image_potfolio" src="./image/knucks.jpg">
+                        <img class="imagep3" alt="image_potfolio" src="image/knucks.jpg">
                         <div class="musiquedumoment">
                                 <p class="font_l">
                                         "Nice & Good" est une chanson de hip-hop avec une ambiance détendue et groovy.
@@ -198,7 +198,7 @@
                         </div>
                 </section>
                 <section class="custom-slider fade">
-                        <img class="imagep2" alt="image_potfolio" src="./image/youngnudy.jpg">
+                        <img class="imagep2" alt="image_potfolio" src="image/youngnudy.jpg">
                         <div class="musiquedumomentT">
                                 <p class="font_l">
                                         "No Clue" est une chanson de hip-hop de Young Nudy en collaboration avec Lil
