--- a/portfolio2.html
+++ b/portfolio2.html
@@ -23,7 +23,7 @@
     
 
 <header>
-   <a  href="/index.html"><i class="bi bi-menu-button"></i></a> 
+   <a  href="./pages/index.html"><i class="bi bi-menu-button"></i></a> 
 </header>
 
 <table class="sinailaquoi">
@@ -32,10 +32,10 @@
         <div class="card__giratorio">
             <div class="card__giratorio-conteudo">
                 <div class="card__giratorio-conteudo--frente">
-                    <img src="/image/cvimage.jpg" alt="mon cv" class="logo">
+                    <img src="image/cvimage.jpg" alt="mon cv" class="logo">
                 </div>
                 <div class="card__giratorio-conteudo--traseira">
-                    <a href="/cv.html"><img src="/image/cv_page-0001.jpg" alt="mon cv" class="logo"></a>
+                    <a href="./pages/cv.html"><img src="image/cv_page-0001.jpg" alt="mon cv" class="logo"></a>
                     <h1>MON CV</h1>
                 </div>
             </div>
@@ -45,10 +45,10 @@
         <div class="card__giratorio">
           <div class="card__giratorio-conteudo">
             <div class="card__giratorio-conteudo--frente">
-              <img src="/image/rea.jpg" alt="Logo Programador CS" class="logo">
+              <img src="image/rea.jpg" alt="Logo Programador CS" class="logo">
             </div>
             <div class="card__giratorio-conteudo--traseira">
-              <a href="/porreacc.html"><img src="/image/fttug.jpg" alt="Logo Programador CS" class="logo"></a>
+              <a href="./pages/porreacc.html"><img src="image/fttug.jpg" alt="Logo Programador CS" class="logo"></a>
               <h1>MES RÉALISATIONS</h1>
             </div>
           </div>
@@ -60,10 +60,10 @@
         <div class="card__giratorio">
           <div class="card__giratorio-conteudo">
             <div class="card__giratorio-conteudo--frente">
-              <img src="/image/inspi.jpg" alt="Logo Programador CS" class="logo">
+              <img src="image/inspi.jpg" alt="Logo Programador CS" class="logo">
             </div>
             <div class="card__giratorio-conteudo--traseira">
-              <a href="/portinspi.html"><img src="/image/tdct.jpg" alt="Logo Programador CS" class="logo"></a>
+              <a href="./pages/portinspi.html"><img src="image/tdct.jpg" alt="Logo Programador CS" class="logo"></a>
               <h1>MES INSPIRATIONS</h1>
             </div>
           </div>
@@ -73,7 +73,7 @@
         <div class="card__giratorio">
           <div class="card__giratorio-conteudo">
             <div class="card__giratorio-conteudo--frente">
-              <img src="/image/reso.jpg" alt="Logo Programador CS" class="logo">
+              <img src="image/reso.jpg" alt="Logo Programador CS" class="logo">
             </div>
             <div class="card__giratorio-conteudo--traseira">
               <a href="https://www.instagram.com/cvbe_h/"><i class="bi bi-instagram"></i></a>
