--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <br>
                         <br>
                         <div class="Button_container">
-                                <a href="./pages/portfolio2.html">Consulter</a>
+                                <a href="portfolio2.html">Consulter</a>
                         </div>
                 </div>
 
