--- a/porrea.html
+++ b/porrea.html
@@ -18,15 +18,15 @@
 
 <body>
     <header>
-        <a href="/index.html"><i class="bi bi-menu-button"></i></a>
-        <a href="/portfolio2.html"><i class="bi bi-grid-fill"></i></a>
+        <a href="index.html"><i class="bi bi-menu-button"></i></a>
+        <a href="portfolio2.html"><i class="bi bi-grid-fill"></i></a>
     </header>
 
     <div class="tobol">
         <table>
             <tr>
                 <div class="options">
-                    <div class="option active" style="--optionBackground:url(/image/festport.jpg);">
+                    <div class="option active" style="--optionBackground:url(image/festport.jpg);">
                         <div class="shadow"></div>
                         <div class="label">
                             <div class="icon">
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="option" style="--optionBackground:url(/image/festport2.jpg);">
+                    <div class="option" style="--optionBackground:url(image/festport2.jpg);">
                         <div class="shadow"></div>
                     </div>
                     <div class="option">
@@ -65,7 +65,7 @@
             <tr>
                 <div class="trrrr">
                     <div class="options">
-                        <div class="option active" style="--optionBackground:url(/image/logport.jpg);">
+                        <div class="option active" style="--optionBackground:url(image/logport.jpg);">
                             <div class="shadow"></div>
                             <div class="label">
                                 <div class="icon">
@@ -76,7 +76,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="option" style="--optionBackground:url(/image/logport2.jpg);">
+                        <div class="option" style="--optionBackground:url(image/logport2.jpg);">
                             <div class="shadow"></div>
                         </div>
                         <div class="option">
@@ -118,7 +118,7 @@
 
             <tr>
                 <div class="options">
-                    <div class="option active" style="--optionBackground:url(/image/siteport.jpg);">
+                    <div class="option active" style="--optionBackground:url(image/siteport.jpg);">
                         <div class="shadow"></div>
                         <div class="label">
                             <div class="icon">
