--- a/porreacc.html
+++ b/porreacc.html
@@ -19,8 +19,8 @@
 
 <body>
 	<header>
-		<a href="/index.html"><i class="bi bi-menu-button"></i></a>
-		<a href="/portfolio2.html"><i class="bi bi-grid-fill"></i></a>
+		<a href="index.html"><i class="bi bi-menu-button"></i></a>
+		<a href="portfolio2.html"><i class="bi bi-grid-fill"></i></a>
 	</header>
 
 
@@ -54,13 +54,13 @@
 
 	<div class="container" id="oeoeoe">
 		<div class="icon">
-			<a href="/porrea.html"><img src="/image/loccol.jpg" alt="Image 1"></a>
+			<a href="porrea.html"><img src="image/loccol.jpg" alt="Image 1"></a>
 			<div class="caption">
 				<span>Académiques</span>
 			</div>
 		</div>
 		<div class="icon">
-			<a href="/porrea2.html"><img src="/image/Wacom.jpg" alt="Image 2"></a>
+			<a href="porrea2.html"><img src="image/Wacom.jpg" alt="Image 2"></a>
 			<div class="caption">
 				<span>Persos</span>
 			</div>
