--- a/portinspi.html
+++ b/portinspi.html
@@ -19,8 +19,8 @@
 
 <body>
     <header>
-        <a href="/index.html"><i class="bi bi-menu-button"></i></a>
-        <a href="/portfolio2.html"><i class="bi bi-grid-fill"></i></a>
+        <a href="index.html"><i class="bi bi-menu-button"></i></a>
+        <a href="portfolio2.html"><i class="bi bi-grid-fill"></i></a>
     </header>
 
 
@@ -58,7 +58,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="/image/inspiim1.jpg" alt="insp1">
+            <img src="image/inspiim1.jpg" alt="insp1">
         </div>
         <div class="text">
             <h1>Inspiration 1</h1>
@@ -80,14 +80,14 @@
             </p>
         </div>
         <div class="image">
-            <img src="/image/inspiim2.jpg" alt="insp2">
+            <img src="image/inspiim2.jpg" alt="insp2">
         </div>
     </div>
     <div class="containr">
         <h1>Petit Moodboard de mes inspirations, mes pensées, mon univers :</h1>
     </div>
     <div class="mood">
-        <img src="/image/mood.jpg" alt="mood" style="width: 100%;">
+        <img src="image/mood.jpg" alt="mood" style="width: 100%;">
     </div>
 </body>
 
