--- a/cv.html
+++ b/cv.html
@@ -19,9 +19,9 @@
 
 <body>
     <header>
-		<a href="/index.html"><i class="bi bi-menu-button"></i></a>
-		<a href="/portfolio2.html"><i class="bi bi-grid-fill"></i></a>
+		<a href="index.html"><i class="bi bi-menu-button"></i></a>
+		<a href="portfolio2.html"><i class="bi bi-grid-fill"></i></a>
 	</header>
-        <img src="/image/cv_page-0001.jpg" alt="cvzer">
+        <img src="image/cv_page-0001.jpg" alt="cvzer">
 </body>
 </html>
