--- a/portfolio2.html
+++ b/portfolio2.html
@@ -23,7 +23,7 @@
     
 
 <header>
-   <a  href="index.html"><i class="bi bi-menu-button"></i></a> 
+   <a  href="portfolio/index.html"><i class="bi bi-menu-button"></i></a> 
 </header>
 
 <table class="sinailaquoi">
@@ -35,7 +35,7 @@
                     <img src="image/cvimage.jpg" alt="mon cv" class="logo">
                 </div>
                 <div class="card__giratorio-conteudo--traseira">
-                    <a href="cv.html"><img src="image/cv_page-0001.jpg" alt="mon cv" class="logo"></a>
+                    <a href="portfolio/cv.html"><img src="image/cv_page-0001.jpg" alt="mon cv" class="logo"></a>
                     <h1>MON CV</h1>
                 </div>
             </div>
@@ -48,7 +48,7 @@
               <img src="image/rea.jpg" alt="Logo Programador CS" class="logo">
             </div>
             <div class="card__giratorio-conteudo--traseira">
-              <a href="porreacc.html"><img src="image/fttug.jpg" alt="Logo Programador CS" class="logo"></a>
+              <a href="portfolio/porreacc.html"><img src="image/fttug.jpg" alt="Logo Programador CS" class="logo"></a>
               <h1>MES RÉALISATIONS</h1>
             </div>
           </div>
@@ -63,7 +63,7 @@
               <img src="image/inspi.jpg" alt="Logo Programador CS" class="logo">
             </div>
             <div class="card__giratorio-conteudo--traseira">
-              <a href="portinspi.html"><img src="image/tdct.jpg" alt="Logo Programador CS" class="logo"></a>
+              <a href="portfolio/portinspi.html"><img src="image/tdct.jpg" alt="Logo Programador CS" class="logo"></a>
               <h1>MES INSPIRATIONS</h1>
             </div>
           </div>
