--- a/porrea2.html
+++ b/porrea2.html
@@ -18,8 +18,8 @@
 
 <body>
     <header>
-        <a href="/index.html"><i class="bi bi-menu-button"></i></a>
-        <a href="/portfolio2.html"><i class="bi bi-grid-fill"></i></a>
+        <a href="index.html"><i class="bi bi-menu-button"></i></a>
+        <a href="portfolio2.html"><i class="bi bi-grid-fill"></i></a>
     </header>
 
     <div class="tobol">
@@ -27,7 +27,7 @@
             <tr>
                 <div class="trrrr">
                     <div class="options">
-                        <div class="option active" style="--optionBackground:url(/image/jonsoport.jpg);">
+                        <div class="option active" style="--optionBackground:url(image/jonsoport.jpg);">
                             <div class="shadow"></div>
                             <div class="label">
                                 <div class="icon">
@@ -68,7 +68,7 @@
             <br>
             <tr>
                 <div class="options">
-                    <div class="option active" style="--optionBackground:url(/image/habiport.jpg);">
+                    <div class="option active" style="--optionBackground:url(image/habiport.jpg);">
                         <div class="shadow"></div>
                         <div class="label">
                             <div class="icon">
@@ -98,7 +98,7 @@
             <tr>
                 <div class="trrrr">
                     <div class="options">
-                        <div class="option active" style="--optionBackground:url(/image/leoniport.jpg);">
+                        <div class="option active" style="--optionBackground:url(image/leoniport.jpg);">
                             <div class="shadow"></div>
                             <div class="label">
                                 <div class="icon">
@@ -136,7 +136,7 @@
 
             <tr>
                 <div class="options">
-                    <div class="option active" style="--optionBackground:url(/image/guignport.jpg);">
+                    <div class="option active" style="--optionBackground:url(image/guignport.jpg);">
                         <div class="shadow"></div>
                         <div class="label">
                             <div class="icon">
@@ -175,7 +175,7 @@
             <tr>
                 <div class="trrrr">
                     <div class="options">
-                        <div class="option active" style="--optionBackground:url(/image/favelaport.jpg);">
+                        <div class="option active" style="--optionBackground:url(image/favelaport.jpg);">
                             <div class="shadow"></div>
                             <div class="label">
                                 <div class="icon">
@@ -205,7 +205,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="option" style="--optionBackground:url(/image/favelaport2.jpg);">
+                        <div class="option" style="--optionBackground:url(image/favelaport2.jpg);">
                             <div class="shadow"></div>
                         </div>
                         <div class="option">
@@ -229,7 +229,7 @@
 
             <tr>
                 <div class="options">
-                    <div class="option active" style="--optionBackground:url(/image/blendport.jpg);">
+                    <div class="option active" style="--optionBackground:url(image/blendport.jpg);">
                         <div class="shadow"></div>
                         <div class="label">
                             <div class="icon">
@@ -293,7 +293,7 @@
 
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script src="/porrea.js"></script>
+    <script src="porrea.js"></script>
 </body>
 
 </html>
