--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 et accrocheurs.
                                 Mon amour pour le football m'a amené à concevoir des designs pour des équipes et des
                                 clubs de football,
-                                que vous pourrez découvrir dans ma galerie de projets.</span></p>
+                                que vous verrez prochainement dans ma galerie de projets.</span></p>
                 <p class="font_8" style="font-size: 16px; text-align: center;"><span style="font-size:16px;">En ce qui
                                 concerne
                                 les mangas/animes, j'aime travailler sur des illustrations de personnages populaires, en
