--- a/porrea.html
+++ b/porrea.html
@@ -132,7 +132,7 @@
 
                     <div class="option">
                         <div class="shadowa">
-                            <p>Ci-contre mon tout premier site web, dédié à l'univers passionnant du manga ! Avec
+                            <p>Ci-contre, mon tout premier site web, dédié à l'univers passionnant du manga ! Avec
                                 mon site, j'ai voulu créer un espace où les fans de manga peuvent trouver des
                                 informations sur leurs séries préférées, découvrir de nouveaux mangas, partager leurs
                                 impressions avec d'autres fans, et plus encore.<br>
